fix #5: 채용공고 등록 서비스 로직 수정
- Job add 메소드 정의
- JobSkill 팩토리 메소드 정의